Доработал README.md